# clickorm-ch

./: .gitignore  README.md  pyproject.toml
src/clickorm_ch/: __init__.py  compiler.py  ddl.py  dialect.py  engine.py  expressions.py  insert_builder.py  model.py  query.py  types.py
